some small changes: -added css folder in examples folder for additional css styling -added custom canvas tag so it isn't created automatically anymore by three.js -added ambient lightning -modified code for the onClick function

--- a/examples/pieChartExample.html
+++ b/examples/pieChartExample.html
@@ -2,21 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Experiment</title>
+    <title>Pie Chart</title>
+
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 	
 </head>
 <body>
-<script type="application/json" src="../node_modules/three/examples/fonts/optimer_bold.typeface.json"></script>
-<script type="application/json" src="../node_modules/three/examples/fonts/optimer_regular.typeface.json"></script>
-<script type="application/json" src="../node_modules/three/examples/fonts/helvetiker_bold.typeface.json"></script>
-<script type="application/json" src="../node_modules/three/examples/fonts/helvetiker_regular.typeface.json"></script>
-<script type="application/json" src="../node_modules/three/examples/fonts/droid/droid_sans_regular.typeface.json"></script>
-<script type="application/json" src="../node_modules/three/examples/fonts/droid/droid_sans_bold.typeface.json"></script>
-<script type="application/json" src="../node_modules/three/examples/fonts/droid/droid_serif_regular.typeface.json"></script>
-<script type="application/json" src="../node_modules/three/examples/fonts/droid/droid_serif_bold.typeface.json"></script>
+
+
+<canvas id="myThreeJsCanvas"></canvas>
 
 <script type="text/javascript" src="../node_modules/three/build/three.js"></script>
 <script type="text/javascript" src="../src/utils/TrackballControls.js"></script>
 <script type="text/javascript" src="../src/pieChart.js"></script>
+
+
 </body>
 </html>
