calculation of percent

--- a/examples/jsonPrep.html
+++ b/examples/jsonPrep.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>jsonPrep | anchart3d</title>
-
-<script type="text/javascript" src="../src/jsonPrep.js"></script>	
 </head>
 <body>
 
 <h1>jsonPrep</h1>
-
+<p id="pseudoconsole">
+</p>
+<script type="text/javascript" src="../src/jsonPrep.js"></script>
 </body>
 </html>
