Added object oriented Chart implementation

--- a/examples/pieChartExample.html
+++ b/examples/pieChartExample.html
@@ -8,13 +8,18 @@
 
 </head>
 <body>
-
+<div id="legend-background" class="legend-background">
+    <h4> Piechart Legend</h4>
+    <ul id="legend">
+    </ul>
+</div>
 
 <canvas id="myThreeJsCanvas"></canvas>
 
 <script type="text/javascript" src="../node_modules/three/build/three.js"></script>
 <script type="text/javascript" src="../src/utils/TrackballControls.js"></script>
 <script type="text/javascript" src="../src/utils/SceneInit.js"></script>
+<script type="text/javascript" src="../src/utils/legend.js"></script>
 <script type="text/javascript" src="../src/utils/jsonData.js"></script>
 <script type="text/javascript" src="../src/pieChart.js"></script>
 
