--- a/examples/pieChartExample.html
+++ b/examples/pieChartExample.html
@@ -10,22 +10,19 @@
 <body>
 
 
-<canvas id="myThreeJsCanvas"></canvas>
+<canvas id="anchart3d"></canvas>
 
 <script type="text/javascript" src="../node_modules/three/build/three.js"></script>
 <script type="text/javascript" src="../src/utils/TrackballControls.js"></script>
 <script type="text/javascript" src="../src/utils/SceneInit.js"></script>
 <script type="text/javascript" src="../src/utils/jsonData.js"></script>
 <script type="text/javascript" src="../src/pieChart.js"></script>
-
+<script type="text/javascript" src="../src/anchart3d.js"></script>
 <script>
-    let scene = new SceneInit(45);
-    scene.initScene();
-    scene.animate();
+    
+    //createChart("id_of_dom_element","location_of_json","chart_type");
+    createChart("anchart3d","data.json","pieChart");
 
-    const jsonData = new JsonData();
-    const pieChart = new PieChart(jsonData);
-    scene.scene.add(pieChart.threeObject);
 </script>
 
 
