--- a/examples/pieChartExample.html
+++ b/examples/pieChartExample.html
@@ -17,7 +17,7 @@
 <script type="text/javascript" src="../src/utils/SceneInit.js"></script>
 <script type="text/javascript" src="../src/utils/jsonData.js"></script>
 <script type="text/javascript" src="../src/pieChart.js"></script>
-<script type="text/javascript" src="../src/anchart3d.js"></script>
+<script type="text/javascript" src="../src/utils/createChart.js"></script>
 <script>
     
     //createChart("id_of_dom_element","location_of_json","chart_type");
