--- a/examples/pieChartExample.html
+++ b/examples/pieChartExample.html
@@ -14,6 +14,8 @@
     </ul>
 </div>
 
+<div id="details"></div>
+
 <canvas id="anchart3d"></canvas>
 
 <script type="text/javascript" src="../node_modules/three/build/three.js"></script>
