removing unnecessary stuff

--- a/examples/pieChartExample.html
+++ b/examples/pieChartExample.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-<div id="legend-background" class="legend-background">
+<div id="legend-background">
     <h4> Piechart Legend</h4>
     <ul id="legend">
     </ul>
