--- a/examples/pieChartExample.html
+++ b/examples/pieChartExample.html
@@ -18,6 +18,7 @@
 
 <canvas id="anchart3d"></canvas>
 
+
 <script type="text/javascript" src="../node_modules/three/build/three.js"></script>
 <script type="text/javascript" src="../src/utils/TrackballControls.js"></script>
 <script type="text/javascript" src="../src/utils/SceneInit.js"></script>
@@ -25,6 +26,7 @@
 <script type="text/javascript" src="../src/utils/JsonData.js"></script>
 <script type="text/javascript" src="../src/PieChart.js"></script>
 <script type="text/javascript" src="../src/utils/CreateChart.js"></script>
+
 <script>
 
     let jsonData = [
@@ -75,9 +77,11 @@
             ]
         }
     ]
-    
+
+    new CreateChart("anchart3d",jsonData,"pieChart");
+
     //createChart("id_of_dom_element","location_of_json","chart_type");
-    createChart("anchart3d",jsonData,"pieChart");
+    //createChart("anchart3d",jsonData,"pieChart");
 
 </script>
 
