resolved referenceError for THREE

--- a/examples/pieChartExample.html
+++ b/examples/pieChartExample.html
@@ -26,8 +26,8 @@
 <script type="text/javascript" src="../src/PieChart.js"></script>
 <script type="text/javascript" src="../src/utils/CreateChart.js"></script>
 -->
-<script type="text/javascript" src="../node_modules/three/build/three.js"></script>
-<script type="text/javascript" src="../build/anchart3d.min.js"></script>
+
+<script type="text/javascript" src="../build/anchart3d.js"></script>
 <script>
 
     let jsonData = [
