--- a/examples/pieChartExample.html
+++ b/examples/pieChartExample.html
@@ -26,62 +26,9 @@
 <script type="text/javascript" src="../src/PieChart.js"></script>
 <script type="text/javascript" src="../src/utils/CreateChart.js"></script>
 -->
+<script type="text/javascript" src="../node_modules/three/build/three.js"></script>
+<script type="text/javascript" src="../src/utils/TrackballControls.js"></script>
 <script type="text/javascript" src="../build/anchart3d.js"></script>
-<script>
-
-    let jsonData = [
-        {
-            "name":"Österreich",
-            "values": [
-                {"name":"Einwohner", "value":8747000},
-                {"name":"DSGehalt", "value":2670}
-            ]
-        },
-        {
-            "name":"Deutschland",
-            "values": [
-                {"name":"Einwohner", "value":80062000},
-                {"name":"DSGehalt", "value":2790}
-            ]
-        },
-        {
-            "name":"Italien",
-            "values": [
-                {"name":"Einwohner", "value":59083000},
-                {"name":"DSGehalt", "value":2390}
-            ]
-        },
-        {
-            "name":"Russland",
-            "values": [
-                {"name":"Einwohner", "value":143500000},
-                {"name":"DSGehalt", "value":1780}
-            ]
-        },{
-            "name":"Schweiz",
-            "values": [
-                {"name":"Einwohner", "value":8081000},
-                {"name":"DSGehalt", "value":2880}
-            ]
-        },{
-            "name":"Belgien",
-            "values": [
-                {"name":"Einwohner", "value":11200000},
-                {"name":"DSGehalt", "value":2470}
-            ]
-        },{
-            "name":"Frankreich",
-            "values": [
-                {"name":"Einwohner", "value":66030000},
-                {"name":"DSGehalt", "value":2500}
-            ]
-        }
-    ]
-
-    new CreateChart("anchart3d",jsonData,"pieChart");
-
-</script>
-
 
 </body>
 </html>
