--- a/examples/pieChartExample.html
+++ b/examples/pieChartExample.html
@@ -17,16 +17,15 @@
 <div id="details"></div>
 
 <canvas id="anchart3d"></canvas>
-<!--
+
 <script type="text/javascript" src="../node_modules/three/build/three.js"></script>
 <script type="text/javascript" src="../src/utils/TrackballControls.js"></script>
 <script type="text/javascript" src="../src/utils/SceneInit.js"></script>
-<script type="text/javascript" src="../src/utils/Legend.js"></script>
-<script type="text/javascript" src="../src/utils/JsonData.js"></script>
-<script type="text/javascript" src="../src/PieChart.js"></script>
-<script type="text/javascript" src="../src/utils/CreateChart.js"></script>
--->
-<script type="text/javascript" src="../build/anchart3d.js"></script>
+<script type="text/javascript" src="../src/utils/legend.js"></script>
+<script type="text/javascript" src="../src/utils/jsonData.js"></script>
+<script type="text/javascript" src="../src/pieChart.js"></script>
+<script type="text/javascript" src="../src/utils/createChart.js"></script>
+
 <script>
 
     let jsonData = [
@@ -78,7 +77,15 @@
         }
     ];
 
-    new CreateChart("anchart3d",jsonData,"pieChart");
+    /**
+    * COMMENT: API kann gechained werden nach beliebieger Reihenfolge AUßER draw!
+     * Die .draw() methode MUSS immer zum Schluss aufgerufen werden!
+     **/
+    createChart("anchart3d")
+        .setScene()
+        .setChart("pieChart")
+        .chartData(jsonData)
+        .draw();
 
 </script>
 
