--- a/examples/pieChartExample.html
+++ b/examples/pieChartExample.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div id="legend-background">
-    <h4> Piechart Legend</h4>
+    <h4>Piechart Legend</h4>
     <ul id="legend">
     </ul>
 </div>
@@ -19,12 +19,15 @@
 <canvas id="anchart3d"></canvas>
 
 <script type="text/javascript" src="../node_modules/three/build/three.js"></script>
+<!--
 <script type="text/javascript" src="../src/utils/TrackballControls.js"></script>
 <script type="text/javascript" src="../src/utils/SceneInit.js"></script>
 <script type="text/javascript" src="../src/utils/legend.js"></script>
 <script type="text/javascript" src="../src/utils/jsonData.js"></script>
 <script type="text/javascript" src="../src/pieChart.js"></script>
 <script type="text/javascript" src="../src/utils/createChart.js"></script>
+-->
+<script type="text/javascript" src="../build/anchart3d.js"></script>
 
 <script>
 
