added config to webpack: -can use a global variable which gives access (exposes) createChart from bundled version -file watcher and bundler shows progress

--- a/examples/pieChartExample.html
+++ b/examples/pieChartExample.html
@@ -84,7 +84,7 @@
     * COMMENT: API kann gechained werden nach beliebieger Reihenfolge AUßER draw!
      * Die .draw() methode MUSS immer zum Schluss aufgerufen werden!
      **/
-    createChart("anchart3d")
+    anchart3d.createChart("anchart3d")
         .setScene()
         .setChart("pieChart")
         .chartData(jsonData)
