added new features: -OrbitControls -no panning -keyevent when pressing certain keys -KeyCode R resets camera position to initial pos. (animated)

--- a/examples/pieChartExample.html
+++ b/examples/pieChartExample.html
@@ -19,6 +19,7 @@
 <canvas id="anchart3d"></canvas>
 
 <script type="text/javascript" src="../node_modules/three/build/three.js"></script>
+<script type="text/javascript" src="../node_modules/tween.js/src/Tween.js"></script>
 <script type="text/javascript" src="../build/anchart3d.js"></script>
 
 <script>
