fixed some errors;   config json is now valid

--- a/examples/pieChartExample.html
+++ b/examples/pieChartExample.html
@@ -72,11 +72,7 @@
         }
     ];
 
-    let configuration = {
-        "tooltip": true,
-        "legend": false,
-        "background-color": "#FA8072", //Farbe: salmon
-    };
+    let configuration = {"tooltip": true, "legend": true};
     /**
     * COMMENT: API kann gechained werden nach beliebieger Reihenfolge AUßER draw!
      * Die .draw() methode MUSS immer zum Schluss aufgerufen werden!
