added configuration for background color and tooltip

--- a/examples/pieChartExample.html
+++ b/examples/pieChartExample.html
@@ -72,7 +72,7 @@
         }
     ];
 
-    let configuration = {"tooltip": true, "legend": true};
+    let configuration = {"tooltip": false, "legend": true, "bgcolor":"#009b9b","startAnimation":true};
     /**
     * COMMENT: API kann gechained werden nach beliebieger Reihenfolge AUßER draw!
      * Die .draw() methode MUSS immer zum Schluss aufgerufen werden!
