added configuration for serveral features

--- a/examples/pieChartExample.html
+++ b/examples/pieChartExample.html
@@ -76,7 +76,7 @@
         }
     ];
 
-    let sceneConfig = {"tooltip": true, "legend": true, "bgcolor":"skyblue","startAnimation":true, "transparency":false, "antialias": true, "fov":45};
+    let sceneConfig = {"tooltip": true, "legend": true, "bgcolor":"skyblue","startAnimation":false, "transparency":true, "antialias": true, "fov":45};
     /**
     * COMMENT: API kann gechained werden nach beliebieger Reihenfolge AUßER draw!
      * Die .draw() methode MUSS immer zum Schluss aufgerufen werden!
