--- a/examples/pieChartExample.html
+++ b/examples/pieChartExample.html
@@ -76,16 +76,17 @@
         }
     ];
 
-    let sceneConfig = {"tooltip": true, "legend": true, "bgcolor":"skyblue","startAnimation":true, "transparency":false, "antialias": true, "fov":45};
+    let configuration = {"tooltip": false, "legend": false, "bgcolor":"skyblue", "startAnimation":true,
+                         "chartAnimation": false, "transparency":false, "antialias": true, "fov":45};
+
     /**
     * COMMENT: API kann gechained werden nach beliebieger Reihenfolge AUßER draw!
      * Die .draw() methode MUSS immer zum Schluss aufgerufen werden!
      **/
     anchart3d.createChart("anchart3d")
-        .setScene(sceneConfig)
+        .setScene(configuration)
         .setChart("pieChart")
         .chartData(jsonData)
-        .chartConfig()
         .draw();
 
 </script>
