added function in jsonData file to check jsonData for consistency in naming conventions and correct naming of property keys

--- a/examples/pieChartExample.html
+++ b/examples/pieChartExample.html
@@ -83,7 +83,7 @@ let configuration = {"tooltip": true, "legend": true, "bgcolor": "skyblue", "sta
      * Die .draw() methode MUSS immer zum Schluss aufgerufen werden!
      **/
     anchart3d.createChart("anchart3d")
-        .setScene(configuration)
+        .setConfig(configuration)
         .setChart("pieChart")
         .chartData(jsonData)
         .draw();
