working on other sorting mechanism...going on to implement live data swapping

--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
         }
     ];
 
-var configuration = {"sortDataBy": "data1", "tooltip": true, "legend": true, "bgcolor": "skyblue", "startAnimation": true, "chartAnimation": true, "transparency": false, "antialias": true, "fov": 45};
+var configuration = {"tooltip": true, "legend": true, "bgcolor": "skyblue", "startAnimation": true, "chartAnimation": true, "transparency": false, "antialias": true, "fov": 45};
 
     anchart3d.createChart("anchart3d")
         .setConfig(configuration)
