Added Branch for BarChart development

--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@ var configuration = {"sortDataBy": "data1", "tooltip": true, "legend": true, "bg
 
     anchart3d.createChart("anchart3d")
         .setConfig(configuration)
-        .setChart("pieChart")
+        .setChart("barChart")
         .chartData(jsonData)
         .draw(); //.draw() must be last
 
