added fluent api for charts

--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@ var configuration = {"tooltip": true, "legend": true, "bgcolor": "skyblue", "sta
 
     anchart3d.createChart("anchart3d")
         .setConfig(configuration)
-        .setChart("pieChart")
+        .pieChart()
         .chartData(jsonData)
         .draw(); //.draw() must be last
 
