--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,13 @@
 <div id="details"></div>
 <div id="controls"></div>
 
-<canvas id="anchart3d"></canvas>
+<!-- 
+the name "canvasparent" is an example and can be any name or even omitted 
+if ommited, then the chart will take all available space
+-->
+<div id="canvasparent">
+    <canvas id="anchart3d"></canvas>
+</div>
 
 <script type="text/javascript" src="./../build/anchart3d.js"></script>
 
@@ -72,7 +78,7 @@
         }
     ];
 
-var configuration = {"sortDataBy": "data1", "tooltip": true, "legend": true, "bgcolor": "skyblue", "startAnimation": true, "chartAnimation": true, "transparency": false, "antialias": true, "fov": 45};
+var configuration = {"sortDataBy": "data1", "tooltip": true, "legend": true, "startAnimation": true, "chartAnimation": true, "transparency": false, "antialias": true, "fov": 45};
 
     anchart3d.createChart("anchart3d")
         .setConfig(configuration)
