--- a/public/index.html
+++ b/public/index.html
@@ -72,12 +72,34 @@
         }
     ];
 
+
+
+    var jsonData2 = [
+        {
+            "name":"Österreich",
+            "values": [
+                {"name":"Einwohner", "value":8747000},
+                {"name":"DSGehalt", "value":2670}
+            ]
+        },
+        {
+            "name":"Deutschland",
+            "values": [
+                {"name":"Einwohner", "value":80062000},
+                {"name":"DSGehalt", "value":2790}
+            ]
+        }
+    ];
+
+
+
 var configuration = {"tooltip": true, "legend": true, "bgcolor": "skyblue", "startAnimation": true, "chartAnimation": true, "transparency": false, "antialias": true, "fov": 45};
 
     anchart3d.createChart("anchart3d")
         .setConfig(configuration)
         .pieChart()
         .chartData(jsonData)
+        .chartData(jsonData2)
         .draw(); //.draw() must be last
 
 </script>
