configurable osc / todo fix object name

--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,7 @@ var configuration = {
     "sortDataBy": "data1",
     "details": true,
     "tooltip": true,
+    "showOnScreenControls": true,
     "legend": true,
     //"bgcolor": "#f00",
     "startAnimation": true,
