small changes to control appearance

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,9 @@
 </div>
 
 <div id="details"></div>
-<div id="controls"></div>
+<div id="controlcontainer"> <!-- not required and used for positionioning purposes only -->
+    <div id="controls"></div>
+</div>
 
 <!-- 
 the name "canvasparent" is an example and can be any name or even omitted 
