prototype data swapping works

--- a/public/index.html
+++ b/public/index.html
@@ -76,17 +76,31 @@
 
     var jsonData2 = [
         {
-            "name":"Österreich",
+            "name":"Uganda",
             "values": [
-                {"name":"Einwohner", "value":8747000},
-                {"name":"DSGehalt", "value":2670}
+                {"name":"Einwohner", "value":37580000},
+                {"name":"DSGehalt", "value":850}
             ]
         },
         {
-            "name":"Deutschland",
+            "name":"Usbekistan",
             "values": [
-                {"name":"Einwohner", "value":80062000},
-                {"name":"DSGehalt", "value":2790}
+                {"name":"Einwohner", "value":30240000},
+                {"name":"DSGehalt", "value":990}
+            ]
+        },
+        {
+            "name":"Honolulu",
+            "values": [
+                {"name":"Einwohner", "value":374658},
+                {"name":"DSGehalt", "value":1020}
+            ]
+        },
+        {
+            "name":"Kambodscha",
+            "values": [
+                {"name":"Einwohner", "value":15140000},
+                {"name":"DSGehalt", "value":1170}
             ]
         }
     ];
