--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>Pie Chart</title>
 
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-
+    <script type="text/javascript" src="./../build/anchart3d.js"></script>
 </head>
 <body>
 <div id="legend-background">
@@ -14,12 +14,12 @@
     </ul>
 </div>
 
+
 <div id="details"></div>
 <div id="controls"></div>
 
 <canvas id="anchart3d"></canvas>
 
-<script type="text/javascript" src="./../build/anchart3d.js"></script>
 
 <script>
 
@@ -79,28 +79,35 @@
             "name":"Uganda",
             "values": [
                 {"name":"Einwohner", "value":37580000},
-                {"name":"DSGehalt", "value":850}
+                {"name":"DSGehalt", "value":1020}
             ]
         },
         {
             "name":"Usbekistan",
             "values": [
                 {"name":"Einwohner", "value":30240000},
-                {"name":"DSGehalt", "value":990}
+                {"name":"DSGehalt", "value":1320}
             ]
         },
         {
-            "name":"Honolulu",
+            "name":"Spanien",
             "values": [
-                {"name":"Einwohner", "value":374658},
-                {"name":"DSGehalt", "value":1020}
+                {"name":"Einwohner", "value":46770000},
+                {"name":"DSGehalt", "value":2120}
             ]
         },
         {
-            "name":"Kambodscha",
+            "name":"Polen",
             "values": [
-                {"name":"Einwohner", "value":15140000},
-                {"name":"DSGehalt", "value":1170}
+                {"name":"Einwohner", "value":38350000},
+                {"name":"DSGehalt", "value":1970}
+            ]
+        },
+        {
+            "name":"Türkei",
+            "values": [
+                {"name":"Einwohner", "value":74930000},
+                {"name":"DSGehalt", "value":2075}
             ]
         }
     ];
