modified the API design for swapData()

--- a/public/index.html
+++ b/public/index.html
@@ -142,10 +142,12 @@ var configuration = {
 
     /* UNCOMMENT FOR LIVE DATA SWAPPING
     setTimeout(function () {
-        chart3D.swapData(jsonData2,"DSGehalt");
-        chart3D.swapData(jsonData2,"Einwohner"); //only here for demonstration of preventing chaining of this method!
+        chart3D.chartData(jsonData2,"Einwohner");
+        //chart3D.barChart();
+        chart3D.swapData();
+        chart3D.swapData(); //only here for demonstration of preventing chaining of this method!
     },7000);
-    */
+     */
 
 </script>
 
