--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
 
 <div id="wrapper">
 <h1>anchart3d</h1>
-<h2>PieChart 1</h2>
+<h2>PieChart</h2>
 <div id="blatestpie"></div>
-<h2>PieChart 2</h2>
+<h2>BarChart</h2>
 <div id="blatestpie2"></div>
 </div>
 
@@ -148,7 +148,7 @@ var barChart = anchart3d.createChart("blatestpie2")
     .draw(); //.draw() must be last
 
 
-/*
+
     setTimeout(function () {
         pieChart.data(jsonData2,"Einwohner");
         barChart.data(jsonData,"Einwohner");
