first proto of animated barchart done...not perfect as chart is already predefined with height

--- a/public/index.html
+++ b/public/index.html
@@ -143,7 +143,7 @@ var configuration_bc = {
     .draw(); //.draw() must be last
 
 var barChart = anchart3d.createChart("blatestpie2")
-    .setConfig(configuration_pc)
+    .setConfig(configuration_bc)
     .barChart()
     .data(jsonData2,"Einwohner")// to sort: .chartData(jsonData, "Einwohner") - sortiert nach Einwohnern
     .draw(); //.draw() must be last
