added color lightener for barchart rows

--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,8 @@
         {
             "name":"Frankreich",
             "values": [
-                {"name":"Einwohner", "value":66030000}
+                {"name":"Einwohner", "value":66030000},
+                {"name":"DSGehalt", "value":2550}
             ]
         }
     ];
@@ -98,7 +99,11 @@
             "name":"IMA2016",
             "values": [
                 {"name":"1.Semester", "value":59},
-                {"name":"2.Semester", "value":44}
+                {"name":"2.Semester", "value":44},
+                {"name":"3.Semester", "value":38},
+                {"name":"4.Semester", "value":36},
+                {"name":"5.Semester", "value":29},
+                {"name":"6.Semester", "value":28}
             ]
         }
     ];
