axis and label implementation  buggy :/

--- a/public/index.html
+++ b/public/index.html
@@ -131,7 +131,8 @@ var configuration = {
     "chartAnimation": true,
     "transparency": false,
     "antialias": true,
-    "fov": 45
+    "fov": 45,
+    "axis":true
 };
 
  var chart3D = anchart3d.createChart("anchart3d")
